# kedro-runners

./: .gitignore  README.md  RELEASE.md  pyproject.toml
docs/: softfail_runner.md
src/kedro_runners/: __init__.py
src/kedro_runners/runners/: backtrack_runner.py  dry_runner.py  incremental_runner.py  softfail_runner.py
