[project]
name = "kedro-runners"
version = "0.1.0"
description = "An extensino of Kedro Runner"
authors = [
    {name = "Nok Lam Chan", email = "mediumnok@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "Apache2"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
